--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>OMDb template</title>
+	<link href="css/style.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 </head>
 <body>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-12 mt-5">
+				<h3>Movie DB</h3>
+			</div>
+			<div class="col-3">
+				<input type="text" class="form-control" placeholder="Search Movie" id="SearchInput">
+			</div>
+			<div class="col-3">
+				<select class="form-control" id="SearchType" disabled>
+					<option value="">Choose type</option>
+					<option value="Movie">Movie</option>
+					<option value="Series">Series</option>
+					<option value="Episode">Episode</option>
+				</select>
+			</div>
+			<div class="col-3">
+				<select class="form-control" id="SearchYear" disabled>
+					<option value="">Choose release year</option>
+					<option value="2022">2022</option>
+					<option value="2021">2021</option>
+					<option value="2020">2020</option>
+					<option value="2019">2019</option>
+					<option value="2018">2018</option>
+				</select>
+			</div>
+		</div>
+		<div class="row mt-5">
+			<div class="col-12 noresult">
+				<h3>Search Query: <span id="searchQuery"></span></h3>
+				<p>No Movies Found</p>
+			</div>
+			<div class="results card-deck">
+			</div>
+		</div>
+	</div>
 	<script src="js/main.js"></script>
+
 </body>
 </html>
